<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surfaceContainerLowest"
    android:padding="16dp">


    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="252dp"
        android:layout_height="172dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/vertani"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/mainImage"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:src="@drawable/landing1"
        android:scaleType="fitCenter"
        android:contentDescription="@string/main_image"
        app:layout_constraintTop_toBottomOf="@id/logoImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_button"
        android:text="@string/login"
        android:textColor="@color/surfaceContainerLowest"
        app:layout_constraintEnd_toStartOf="@id/registerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainImage" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_button"
        android:text="@string/register"
        android:textColor="@color/surfaceContainerLowest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/loginButton"
        app:layout_constraintTop_toBottomOf="@id/mainImage" />


</androidx.constraintlayout.widget.ConstraintLayout>
