<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">


    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="257dp"
        android:layout_height="205dp"
        android:layout_marginTop="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/vertani"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_login"
        android:textSize="16sp"
        android:textColor="@color/shadow"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:alpha="100"/>


    <com.dicoding.vertani.ui.mycustomview.MyEditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/alamat_email"
        android:textSize="14sp"
        android:textColor="@color/shadow"
        android:background="@android:color/transparent"
        android:inputType="textEmailAddress"
        android:paddingVertical="8dp"
        android:paddingHorizontal="12dp"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />


    <View
        android:id="@+id/emailUnderline"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintWidth_percent="0.8" />


    <com.dicoding.vertani.ui.mycustomview.MyEditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/kata_sandi"
        android:textSize="14sp"
        android:textColor="@color/shadow"
        android:background="@android:color/transparent"
        android:inputType="textPassword"
        android:paddingVertical="8dp"
        android:paddingHorizontal="12dp"
        app:layout_constraintTop_toBottomOf="@id/emailUnderline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />


    <View
        android:id="@+id/passwordUnderline"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintWidth_percent="0.8" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_button"
        android:text="@string/masuk"
        android:textColor="@color/surfaceContainerLowest"
        android:textSize="16sp"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@id/passwordUnderline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        tools:alpha="100"/>


    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/lupa_kata_sandi"
        android:textSize="14sp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/belum_punya_akun"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:paddingTop="16dp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
