<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">


    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="181dp"
        android:layout_height="160dp"
        android:layout_marginTop="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="330dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:text="@string/register_title"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView" />

    <EditText
        android:id="@+id/etname"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/Username"
        android:textSize="14sp"
        android:textColor="@color/shadow"
        android:background="@android:color/transparent"
        android:inputType="textEmailAddress"
        android:paddingVertical="8dp"
        android:paddingHorizontal="12dp"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />


    <View
        android:id="@+id/nameUnderline"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etname"
        app:layout_constraintWidth_percent="0.8" />



    <com.dicoding.vertani.ui.mycustomview.MyEditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/alamat_email"
        android:textSize="14sp"
        android:textColor="@color/shadow"
        android:background="@android:color/transparent"
        android:inputType="textEmailAddress"
        android:paddingVertical="8dp"
        android:paddingHorizontal="12dp"
        app:layout_constraintTop_toBottomOf="@id/nameUnderline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />


    <View
        android:id="@+id/emailUnderline"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintWidth_percent="0.8" />


    <com.dicoding.vertani.ui.mycustomview.MyEditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/kata_sandi"
        android:textSize="14sp"
        android:textColor="@color/shadow"
        android:background="@android:color/transparent"
        android:inputType="textPassword"
        android:paddingVertical="8dp"
        android:paddingHorizontal="12dp"
        app:layout_constraintTop_toBottomOf="@id/emailUnderline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />


    <View
        android:id="@+id/passwordUnderline"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintWidth_percent="0.8" />


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_button"
        android:text="@string/Daftar"
        android:textColor="@color/surfaceContainerLowest"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/passwordUnderline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />


    <TextView
        android:id="@+id/tvakun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/belum_punya_akun"
        android:textSize="14sp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
